# LightEvaluation

./: .env.example  .gitignore  README.md  doc.md  pyproject.toml
docs/superpowers/plans/: 2026-06-26-eval-pipeline.md
eval_pipeline/: __init__.py  cli.py
eval_pipeline/core/: __init__.py  backends.py  config.py  io.py  log.py  runner.py  stats.py  task.py
eval_pipeline/templates/: __init__.py  config.yaml  data.jsonl  task_datagen.py  task_generative.py  task_mcq.py
test_workspace/: config_api_20.yaml  config_api_20_batched_logs.yaml  config_api_20_parallel.yaml  config_api_20_parallel_batched_logs.yaml  config_vllm_20.yaml  config_vllm_20_datagen.yaml  config_vllm_20_direct.yaml  config_vllm_20_retry.yaml  config_vllm_20_retry_lowmem.yaml
test_workspace/tasks/: gsm8k_rup.py  gsm8k_rup_datagen.py  gsm8k_rup_direct.py
tests/: test_backends.py  test_cli.py  test_config.py  test_io.py  test_runner.py  test_static_contracts.py  test_stats.py  test_task.py
