[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "light-evaluation"
version = "0.1.0"
description = "A lightweight LLM evaluation and data generation pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "httpx>=0.25",
]

[project.optional-dependencies]
vllm = ["vllm"]
dev = ["pytest>=8"]

[project.scripts]
eval-pipeline = "eval_pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["eval_pipeline*"]

[tool.setuptools.package-data]
eval_pipeline = ["templates/*.yaml", "templates/*.py", "templates/*.jsonl"]

